# godot2amiga

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY.md  INSTALL.md  LICENSE  README.md  README.txt  RELEASE_NOTES_v0.6.0-alpha.md  RELEASE_NOTES_v0.6.1-alpha.md  pyproject.toml  pyproject.toml.patch
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  ace-showcase-runtime-policy.md  architecture.md  asset-pipeline-integration.md  asset-pipeline.md  build-metadata-contract.md  g2a-format.md  g2stack-run-runtime-layout.md  g2stack-showcase.md  g2stack.md  m503-repository-hardening.md  m60-runtime-asset-loading.md  m601-spec-packaging-alignment.md  m602-installed-schema-support.md  m60a-static-bitmap.md  m60b-static-bitmap.md  m60c-ace-generic-main.md  m610-single-sprite2d.md  m611-scenegraph-cleanup.md  m612-sprite2d-scene-schema.md  m62a-runtime-scene.md  m62b-multi-sprite-builder.md  m62c-multi-sprite-example.md  m70a-transform-traversal.md  m70b-runtime-world-transforms.md  m70c-nested-transform-example.md  m71a-sprite-visible.md  m71b-sprite-z-index.md  m71c-sprite-properties-example.md  m72a1-official-tscn-fixture.md  m72a2-tscn-to-g2a-cli.md  m72b-local-texture-assets.md  m72c1-png-palette-analysis.md  m72c2-gimp-palette-m5.md  m72c3-quantized-png-assets-cli.md  m73a-runtime-asset-packaging.md  m73c-asset-aware-runtime-build.md  m74a-viewport-clipping.md  m74d-golden-integration-tests.md  m75a-spriteframes-parser.md  (+35 more)
exporter/: README.md  export_plugin.gd  plugin.cfg
scripts/: bootstrap-g2a-build.sh  bootstrap-godot2amiga-m2-g2a.sh  check-repository-hygiene.sh  enable-ace-visual-smoke-test.py  test-godot-plugin.sh  (+6 more)
(+214 files in other folders)
