[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "godot2amiga-tools"
version = "0.2.0"
description = "Command-line tools and format support for Godot2Amiga"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Godot2Amiga contributors" }
]
keywords = ["godot", "amiga", "ace", "retro", "gamedev"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Build Tools"
]

dependencies = [
  "jsonschema>=4.23,<5",
  "rich>=13.9,<15"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1"
]

[project.scripts]
g2a = "g2a.cli:main"
g2a-validate = "g2a.validate:main"
g2a-build = "g2a.build:main"
g2a-pack = "g2a.pack:main"
g2a-dump = "g2a.dump:main"
g2a-convert = "g2a.convert:main"

[tool.hatch.build.targets.wheel]
packages = ["src/g2a"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["g2a"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
